[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/code/cc_level/shark.gd" type="Script" id=1]
[ext_resource path="res://assets/art/cc_level/sprites/S33_shark/S33_shark-Sheet.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/object_sounds/SD21_sword_hit.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/gui/hud/enemy_healthbar.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "swim",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=12]
radius = 12.9487
height = 38.8801

[sub_resource type="CircleShape2D" id=13]
radius = 261.514

[sub_resource type="CapsuleShape2D" id=14]
radius = 22.4129
height = 57.8522

[node name="shark" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 11 )
animation = "swim"
speed_scale = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.20628, 3.00854 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 12 )

[node name="sword_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="follow_range" type="Area2D" parent="."]

[node name="follow_range_shape" type="CollisionShape2D" parent="follow_range"]
visible = false
position = Vector2( 0, -0.473511 )
shape = SubResource( 13 )

[node name="healthbar" parent="." instance=ExtResource( 4 )]

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -2.35344, 3.09547 )
rotation = 1.5708
shape = SubResource( 14 )
[connection signal="death" from="." to="." method="_on_shark_death"]
[connection signal="health_changed" from="." to="." method="_on_shark_health_changed"]
[connection signal="body_entered" from="follow_range" to="." method="_on_follow_range_body_entered"]
[connection signal="body_exited" from="follow_range" to="." method="_on_follow_range_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
